--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile.prd
+          file: ./Dockerfile
           push: true
           tags: |
             ${{ vars.DOCKERHUB_USERNAME }}/patients-management-service:latest
